install-meta (0.2.4) UNRELEASED; urgency=low

  [ Stefan Lippers-Hollmann ]
  * NOT RELEASED YET

  [ Joaquim Boura ]
  * metapackages for japanese and korean. Thanks to muchan.

 -- Joaquim Boura <x-un-i@sidux.com>  Wed, 30 Jan 2008 18:35:23 +0100

install-meta (0.2.3) unstable; urgency=low

  [ Joaquim Boura ]
  * new icons. some still missing
  * fixed: added hicolor icons

  [ Bernard Gray ]
  * add meta-info icons

  [ Stefan Lippers-Hollmann ]
  * rename sidux-meta.svg --> meta-installer.svg.
  * remove no longer required imagemagick build-dep.
  * pixmaps/sidux-meta-icon.png doesn't seem to be used, remove it.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Tue, 29 Jan 2008 02:42:04 +0100

install-meta (0.2.2) unstable; urgency=low

  * update to debhelper compat 6.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Fri, 18 Jan 2008 23:58:00 +0100

install-meta (0.2.1) unstable; urgency=low

  * fix typo in desktop files.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Fri, 11 Jan 2008 16:52:35 +0100

install-meta (0.2.0) unstable; urgency=low

  * switch from custom su-me to generic su-to-root, adapt dependencies and
    menu files accordingly.
  * move desktop file into standard XDG hierarchy.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Tue, 08 Jan 2008 22:50:18 +0100

install-meta (0.1.52) unstable; urgency=low

  [ Horst Tritremmel ]
  * Education 10 to 99 years updated
  * Education for young programmers updated

  [ Stefan Lippers-Hollmann ]
  * NX is a cool technology, but not maintainable.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Wed, 02 Jan 2008 21:18:40 +0100

install-meta (0.1.51) unstable; urgency=low

  * Games updated
  * LaTeX new, thx to konfuzius
  * lyx-qt removed in LaTeX-Lyx

 -- Horst Tritremmel <hjt@sidux.com>  Thu, 27 Dec 2007 15:26:26 +0100

install-meta (0.1.50) unstable; urgency=low

  * Translation thanks to RoEn

 -- Joaquim Boura <x-un-i@sidux.com>  Tue, 18 Dec 2007 13:23:38 +0100

install-meta (0.1.49) unstable; urgency=low
