@@ -1,8 +1,8 @@
-metapackage-installer		usr/sbin/
-metapackage-installer.desktop	usr/share/applications/sidux/
-packages/*.bm			usr/share/install-meta/
-packages/packages.d/*.bm	usr/share/install-meta/packages.d/
-icons/metapackage-installer.svg	usr/share/icons/hicolor/scalable/apps/
-icons/hicolor			usr/share/icons/
-icons/pixmaps			usr/share/
-icons/share/*			usr/share/install-meta/pixmaps/
+metapackage-installer			usr/sbin/
+metapackage-installer.desktop		usr/share/applications/sidux/
+packages/*.bm				usr/share/install-meta/
+packages/packages.d/*.bm		usr/share/install-meta/packages.d/
+icons/metapackage-installer.svg		usr/share/icons/hicolor/scalable/apps/
+icons/hicolor/*				usr/share/install-meta/icons/
+icons/pixmaps/*				usr/share/install-meta/pixmaps/
+icons/share/*				usr/share/install-meta/pixmaps/
