@@ -6,7 +6,11 @@ install-meta (0.2.4) UNRELEASED; urgency=low
   [ Joaquim Boura ]
   * metapackages for japanese and korean. Thanks to muchan.
 
- -- Joaquim Boura <x-un-i@sidux.com>  Wed, 30 Jan 2008 18:35:23 +0100
+  [ Horst Tritremmel ]
+  * pixmaps directory fix
+  * use new icons from cleary
+
+ -- Horst Tritremmel <hjt@sidux.com>  Wed, 30 Jan 2008 21:04:54 +0100
 
 install-meta (0.2.3) unstable; urgency=low
 
